Fixes 'Hide Events' dropdown hidden by topic on hover (#3)

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -108,15 +108,18 @@ html,body,.container {
     min-height: 32px;
     overflow-y: hidden;
     text-overflow: ellipsis;
-    padding-left: 4px;
-    padding-right: 4px;
     background-color: white;
-    
-    &:hover {
-		height: initial;
-		position: relative;
-		z-index: 1;
-    }
+}
+
+#topic {
+    padding-left: 4px;
+    padding-right: 36px;
+    background-color: white;
+}
+
+#topic:hover {
+	position: absolute;
+	z-index: 1;
 }
 
 #header {
